<resources>
    <string name="app_name">手机影音</string>
    <string name="splash_txt">正在启动...</string>
    <string name="tag_music">音乐</string>
    <string name="tag_vedio">视频</string>
    <string name="tag_find">发现</string>
    <string name="tag_live">直播</string>
    <string name="tag_mycenter">我</string>
    <string name="tb_local">本地</string>
    <string name="tb_net">网络</string>
    <string name="no_vedio">本地没有视频···</string>
    <string name="video_recommend">手机影音-系统推荐</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
